--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
-    "angular2-materialize": "^15.1.10",
+    "angular-progress-bar": "^1.0.9",
+    "bootstrap": "^4.1.3",
     "hammerjs": "^2.0.8",
-    "jquery": "^2.2.4",
+    "jquery": "^3.3.1",
     "materialize-css": "^0.100.2",
     "ngx-cookie-service": "^2.2.0",
+    "ngx-progressbar": "^2.1.1",
+    "popper.js": "^1.14.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
