--- a/proxy.config.json
+++ b/proxy.config.json
@@ -3,6 +3,9 @@
     "/api": {
       "target": "http://localhost:8080",
       "secure": false,
+      "pathRewrite": {
+        "^/api": ""
+      },
       "changeOrigin": true
     }
   }
